# Omicron-Remote-Control-Server

./: .gitignore  CMakeLists.txt  README.md
include/core/: Bluetooth.hpp  Config.hpp  PluginBase.hpp  Server.hpp  global.hpp
src/: CMakeLists.txt  resource.rc
src/app/: CMakeLists.txt
src/app/qrc/: files.qrc  style.css
src/app/rc/: app.rc
src/app/src/: AboutDialog.cpp  AboutDialog.hpp  App.cpp  App.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/core/: CMakeLists.txt
src/core/rc/: core.rc
src/core/src/: Bluetooth.cpp  Config.cpp  PluginBase.cpp  Server.cpp
src/core/src/private/: BluetoothServer.cpp  BluetoothServer.hpp  ClientSocket.hpp  ClientSocketList.cpp  ClientSocketList.hpp  PluginManager.cpp  PluginManager.hpp  ServerBase.hpp  ServerManager.cpp  ServerManager.hpp  TcpServer.cpp  TcpServer.hpp
src/plugins/: CMakeLists.txt
src/plugins/MasterVolumePlugin/: CMakeLists.txt
src/plugins/MasterVolumePlugin/rc/: masterVolumePlugin.rc
src/plugins/MasterVolumePlugin/src/: MasterVolumePlugin.cpp  MasterVolumePlugin.hpp
src/plugins/MasterVolumePlugin/src/linux/: MasterVolume_Alsa.cpp  MasterVolume_Alsa.hpp
src/plugins/MasterVolumePlugin/src/windows/: AudioEndpointVolumeCallback.cpp  AudioEndpointVolumeCallback.hpp  MasterVolume_Win32.cpp  MasterVolume_Win32.hpp
src/plugins/MonitorPlugin/: CMakeLists.txt
src/plugins/MonitorPlugin/rc/: monitorPlugin.rc
src/plugins/MonitorPlugin/src/: MonitorPlugin.cpp  MonitorPlugin.hpp
src/plugins/MonitorPlugin/src/linux/: Monitor_Linux.cpp  Monitor_Linux.hpp
src/plugins/MonitorPlugin/src/windows/: Monitor_Win32.cpp  Monitor_Win32.hpp
